# marketplace

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  database.py  dependencies.py  main.py
app/api/routers/: auth.py  chat.py  devices.py  favorites.py  geocode.py  (+11 more)
app/core/: cache.py  enums.py  exceptions.py  pagination.py  security.py
app/middleware/: correlation_id.py  locale.py  response_envelope.py
app/models/: __init__.py  base.py  chat.py  device.py  item.py  notification.py  offer.py  payment.py  review.py  social.py  store.py  user.py
app/repositories/: base.py  chat.py  device.py  item.py  notification.py  offer.py  order.py  payment.py  review.py  social.py  store.py  user.py
app/schemas/: auth.py  chat.py  device.py  item.py  notification.py  offer.py  otp.py  payment.py  review.py  social.py  store.py  upload.py  user.py
app/services/: auth.py  location.py  notification.py  order.py  otp.py  payment.py  sms.py  storage.py
app/websocket/: handlers.py  manager.py
app/workers/: tasks.py
client-docs/: PROJECT-INVOICE.md
client-docs/Ahmed Almadani/: 00 - Hub.md  01 - Invoice #MKT-2026-001.md  02 - Development Contract.md  03 - Scope of Work.md  Project Overview.canvas
docs/plans/: 2026-03-07-ux-features-design.md
tests/: test_auth_service.py  test_cache.py  test_config.py  test_envelope.py  test_location.py  test_order_service.py  test_otp.py  test_pagination.py  test_payment_service.py  test_schemas.py  test_security.py  test_sms.py  test_storage.py
